--- a/platform/viewer/src/connectedComponents/ViewerMain.css
+++ b/platform/viewer/src/connectedComponents/ViewerMain.css
@@ -19,3 +19,31 @@
   width: 100%;
   height: 100%;
 }
+
+.ViewerMain .loading-backdrop {
+  position: absolute;
+  top: 0;
+  left: 0;
+  right: 0;
+  bottom: 0;
+  background: rgba(250, 250, 250, 0.1);
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
+
+.ViewerMain .animate-loading {
+  animation: AnimateLoading .66s linear infinite;
+  height: 2.5rem;
+  margin: 0 1rem;
+}
+
+@keyframes AnimateLoading {
+  from {
+      transform: rotate(0deg)
+  }
+  to {
+      transform: rotate(360deg)
+  }
+}
